# Agents

./: .gitignore
CODE_MAPPER/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
CODE_MAPPER/Documentation/: Test_Report_1.html  Test_Report_1.md  architecture.md  model-comparison.md  snyk-comparison.md  tool-comparison.md
CODE_MAPPER/agents/: __init__.py  agent_1a.py  agent_1b.py  agent_1c.py  agent_1d.py  agent_1e.py  base.py  code_scanner_prompts.py  semgrep_evidence_agent.py
CODE_MAPPER/config/: settings.py
CODE_MAPPER/docs/setup/: Test Run 1.md
CODE_MAPPER/orchestrator/: __init__.py  call_graph.py  control_plane.py  repo_resolver.py  repo_scanner.py
CODE_MAPPER/rag/: store.py
CODE_MAPPER/rag/docs/: cwe_quick_map.md  cwe_top25.md  owasp_baseline.md  owasp_top10_2021.md  regulatory_controls.md  sanitization_patterns.md  secure_coding_javascript.md  secure_coding_python.md  stride_full.md  stride_reference.md
CODE_MAPPER/reports/: generator.py
CODE_MAPPER/schemas/: __init__.py  models.py
CODE_MAPPER/tests/: __init__.py  conftest.py
CODE_MAPPER/tests/agents/: __init__.py  test_agent_1a.py  test_agent_1b.py
CODE_MAPPER/tests/e2e/: test_full_pipeline.py
CODE_MAPPER/tests/integration/: test_orchestrator.py  test_rag.py  (+2 more)
CODE_MAPPER/tooling/: __init__.py  semgrep_rule_indexer.py  semgrep_runner.py  semgrep_selector.py
CODE_MAPPER/tools/: README.md  call_graph_viewer.html
CODE_MAPPER/validation/: __init__.py  adversarial.py  correlator.py  linked_findings.py  schema_validator.py
(+11 files in other folders)
